spacing issues w/ network bar list items

--- a/assets/css/campbell-nav.css
+++ b/assets/css/campbell-nav.css
@@ -42,7 +42,10 @@
         div#navigation_network ul li#nn_simon a,
         div#navigation_network ul li#nn_music a {
             background: url(../images/site/nav/navigation_pri/bullet_light.png) no-repeat right center;
-            padding: 14px 8px 14px 2px;
+            padding: 14px 8px 14px 5px;
+        }
+        div#navigation_network ul li#nn_blog a {
+            padding-left: 5px;
         }
         div#navigation_network ul li#nn_simon a {
             padding-left: 0;
